--- a/src/App.css
+++ b/src/App.css
@@ -18,388 +18,6 @@ a {
   text-decoration: none;
 }
 
-.home_container {
-  padding: 20px;
-  background: url(/src/assets/background-image-double.jpg) center no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
-.home_box {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  overflow: hidden;
-}
-
-.home_leave {
-  -webkit-animation: fade-out-bck 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: fade-out-bck 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-}
-
-@-webkit-keyframes fade-out-bck {
-  0% {
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: translateZ(-80px);
-    transform: translateZ(-80px);
-    opacity: 0;
-  }
-}
-@keyframes fade-out-bck {
-  0% {
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: translateZ(-80px);
-    transform: translateZ(-80px);
-    opacity: 0;
-  }
-}
-
-.welcome_message {
-  grid-column: 1 / 3;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  font-family: 'Open Sans', sans-serif;
-  height: 100vh;
-  font-weight: 700;
-  letter-spacing: 0.1em;
-  color: #1f2533;
-}
-
-.welcome_japanese {
-  font-size: 3.1em;
-}
-
-.japanese_main {
-  -webkit-animation: scale-in-ver-center 0.5s
-    cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: scale-in-ver-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-}
-
-@-webkit-keyframes scale-in-ver-center {
-  0% {
-    -webkit-transform: scaleY(0);
-    transform: scaleY(0);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: scaleY(1);
-    transform: scaleY(1);
-    opacity: 1;
-  }
-}
-@keyframes scale-in-ver-center {
-  0% {
-    -webkit-transform: scaleY(0);
-    transform: scaleY(0);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: scaleY(1);
-    transform: scaleY(1);
-    opacity: 1;
-  }
-}
-
-.japanese_keyword {
-  -webkit-animation: bounce-in-fwd 1.1s both;
-  animation: bounce-in-fwd 1.1s both;
-  animation-delay: 0.5s;
-}
-@-webkit-keyframes bounce-in-fwd {
-  0% {
-    -webkit-transform: scale(0);
-    transform: scale(0);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-    opacity: 0;
-  }
-  38% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-    opacity: 1;
-  }
-  55% {
-    -webkit-transform: scale(0.7);
-    transform: scale(0.7);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-  }
-  72% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-  }
-  81% {
-    -webkit-transform: scale(0.84);
-    transform: scale(0.84);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-  }
-  89% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-  }
-  95% {
-    -webkit-transform: scale(0.95);
-    transform: scale(0.95);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-  }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-  }
-}
-@keyframes bounce-in-fwd {
-  0% {
-    -webkit-transform: scale(0);
-    transform: scale(0);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-    opacity: 0;
-  }
-  38% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-    opacity: 1;
-  }
-  55% {
-    -webkit-transform: scale(0.7);
-    transform: scale(0.7);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-  }
-  72% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-  }
-  81% {
-    -webkit-transform: scale(0.84);
-    transform: scale(0.84);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-  }
-  89% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-  }
-  95% {
-    -webkit-transform: scale(0.95);
-    transform: scale(0.95);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-  }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-  }
-}
-.welcome_english {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1.8em;
-  font-weight: 500;
-
-  margin-top: 50px;
-  margin-bottom: 40px;
-  letter-spacing: 0.04em;
-  -webkit-animation: swing-in-bottom-fwd 2.5s
-    cubic-bezier(0.175, 0.885, 0.32, 1.275) both;
-  animation: swing-in-bottom-fwd 2.5s cubic-bezier(0.175, 0.885, 0.32, 1.275)
-    both;
-}
-
-@-webkit-keyframes swing-in-bottom-fwd {
-  0% {
-    -webkit-transform: rotateX(100deg);
-    transform: rotateX(100deg);
-    -webkit-transform-origin: bottom;
-    transform-origin: bottom;
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: rotateX(0);
-    transform: rotateX(0);
-    -webkit-transform-origin: bottom;
-    transform-origin: bottom;
-    opacity: 1;
-  }
-}
-@keyframes swing-in-bottom-fwd {
-  0% {
-    -webkit-transform: rotateX(100deg);
-    transform: rotateX(100deg);
-    -webkit-transform-origin: bottom;
-    transform-origin: bottom;
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: rotateX(0);
-    transform: rotateX(0);
-    -webkit-transform-origin: bottom;
-    transform-origin: bottom;
-    opacity: 1;
-  }
-}
-
-.start {
-  position: relative;
-  width: 200px;
-  height: 64px;
-  line-height: 64px;
-  border-radius: 20px;
-  margin: 50px auto;
-  text-align: center;
-  color: var(--color-6);
-  font-size: 1.5em;
-  cursor: pointer;
-  transition: color 2s;
-  overflow: hidden;
-  background: rgba(32, 148, 237, 0.9);
-
-  -webkit-animation: scale-up-bottom 0.4s cubic-bezier(0.39, 0.575, 0.565, 1)
-    both;
-  animation: scale-up-bottom 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-  animation-fill-mode: forwards;
-}
-
-@-webkit-keyframes scale-up-bottom {
-  0% {
-    -webkit-transform: scale(0.5);
-    transform: scale(0.5);
-    -webkit-transform-origin: 50% 100%;
-    transform-origin: 50% 100%;
-  }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-transform-origin: 50% 100%;
-    transform-origin: 50% 100%;
-  }
-}
-@keyframes scale-up-bottom {
-  0% {
-    -webkit-transform: scale(0.5);
-    transform: scale(0.5);
-    -webkit-transform-origin: 50% 100%;
-    transform-origin: 50% 100%;
-  }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-transform-origin: 50% 100%;
-    transform-origin: 50% 100%;
-  }
-}
-
-.start:hover {
-  background-color: rgb(242, 83, 135);
-  transition: all 0.5s 0s ease-in-out;
-}
-
-h1 {
-  font: bold 200% Consolas, Monaco, monospace;
-  border-right: 0.1em solid;
-  text-align: center;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.step_box {
-  grid-row: 2/4;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  margin-top: 50px;
-}
-
-.step img {
-  width: 500px;
-  height: 400px;
-  border-radius: 40px;
-}
-
-.home_step {
-  grid-row: 2/4;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  margin-left: 10vw;
-}
-.home_step h2 {
-  font-size: 2em;
-}
-.home_step h3 {
-  font-size: 1.5em;
-  font-weight: 400;
-}
-footer {
-  grid-column: 1 / 3;
-
-  display: flex;
-  padding: 100px 0px;
-  justify-content: space-around;
-  font-size: 1.3em;
-  font-weight: bold;
-}
-.logo {
-  width: 150px;
-  height: 150px;
-}
-.About {
-  align-self: center;
-  cursor: pointer;
-}
-.About:hover {
-  opacity: 0.5;
-}
-
-.Contact {
-  align-self: center;
-  cursor: pointer;
-}
-.Contact:hover {
-  opacity: 0.5;
-}
-
-.About_container {
-  text-align: center;
-  font-size: 1.3em;
-
-  padding: 10px;
-  letter-spacing: 0.5px;
-}
-.Contact_container {
-  text-align: center;
-  font-size: 1.3em;
-  padding: 10px;
-
-  letter-spacing: 0.5px;
-}
 
 /* Navbar */
 nav {
@@ -554,12 +172,6 @@ section .form {
   row-gap: 1em;
 }
 
-.btn_Yahoo {
-  height: 50px;
-  width: 240px;
-  margin: 15px 0;
-  cursor: pointer;
-}
 
 /* verify */
 
@@ -975,9 +587,15 @@ section .form {
   animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
 }
 
-/* Home */
+/* Home
+
+
+
+
+
+*/
 .container{
-  margin: 0;
+  margin: 1rem 1rem;
   padding: 0;
 }
 .mainpic{
@@ -990,7 +608,6 @@ center{
 }
 .home{
   text-align: center;
-
   width: '100%';
   padding: 100px;
 }
@@ -1025,13 +642,12 @@ h2{
 .sec{
   display: flex;
   flex-direction: row;
+  padding: 2rem 2rem;
+  margin:0 0;
 }
-
 .img{
   float: left;    
   margin: 0 15px 0 40px;
-
-
 }
 .b1{
   flex: 1;
@@ -1103,6 +719,8 @@ h2{
   margin: 5px;
   padding: -5px;
 }
+
+
 /*Video Call */
 .videoCallContainer{
   padding: 2rem 5rem;
